--- a/index.html
+++ b/index.html
@@ -51,7 +51,9 @@
      我想要做一只蚂蚁，只为一粒米可以开心半年
 </p>
 
-
+<p class ="impression"style ="color: blue;font-weight:bold;font-size:30px">
+     我想要做一只大象，能为一只老师吓半年
+</p>
 <p class ="impression"style ="color: blue;font-weight:bold;font-size:30px">
      挽狂澜于既倒，扶大厦于将倾！！！
 </p>
