--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 </p>
 
 <p class ="impression"style ="color: blue;font-weight:bold;font-size:30px">
-     我想要做一只大象，能为一只老师吓半年
+     我想要做一只大象，能为一只老鼠吓半年
 </p>
 <p class ="impression"style ="color: blue;font-weight:bold;font-size:30px">
      挽狂澜于既倒，扶大厦于将倾！！！
