--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
 <h3>操作步骤</h3>
 <ul>
-  <li>0、点击右上角的"Give me Pull Request1" </li>
+  <li>0、点击右上角的"Give me Pull Request" </li>
   <li>1、fork本项目到自己的账户 </li>
   <li>2、把自己账户下的项目clone到本地仓库</li>
   <li>3、修改index.html的留言区增加一条学习感想，可以留下班级姓名。</li>
